# ReGreet

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  REUSE.toml  build.rs  default.nix  egreet.sample.toml  egreet.toml  egreet.toml.base  egreet.ui  flake.nix  i18n.toml  regreet.sample.toml  shell.nix  systemd-tmpfiles.conf
.github/workflows/: lint.yml
.reuse/: dep5
data/: regreet.sample.css  regreet.sample.toml
docs/: CONFIG.md
i18n/en/: regreet.ftl
i18n/uk/: regreet.ftl
nix/: README.md  vscode-shell.nix
nix/shells/: regreet.nix  rust.nix  vscode.nix
packaging/: Containerfile  build-and-install.sh
packaging/config/: greetd.toml  regreet.css  regreet.toml
resources/: resources.gresource.xml  style.css  window.ui
src/: cache.rs  client.rs  common.rs  config.rs  constants.rs  i18n.rs  idle.rs  lru.rs  main.rs  sysutil.rs  tomlutils.rs
src/cache/: lru.rs  mod.rs
src/gui/: component.rs  icons.rs  imp.rs  messages.rs  mod.rs  model.rs  templates.rs
src/gui/widget/: clock.rs
src/gui/widget/power_menu/: custom.rs  mod.rs  systemd.rs  unix.rs
src/sysutil/: accounts_service.rs
