# SPDX-FileCopyrightText: 2022 Harish Rajagopal <harish.rajagopals@gmail.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "regreet"
version = "0.2.0"
authors = ["Harish Rajagopal <harish.rajagopals@gmail.com>"]
edition = "2021"
rust-version = "1.64"
description = "Clean and customizable greeter for greetd"
repository = "https://github.com/rharish101/ReGreet/"
license = "GPL-3.0-or-later"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", default-features = false }
clap = { version = "4.1.4", features = ["derive"] }
const_format = "0.2.26"
derivative = "2.2.0"
file-rotate = "0.7.2"
glob = "0.3.0"
greetd_ipc = { version = "0.9.0", features = ["tokio-codec"] }
gtk4 = "0.5"
lru = "0.9.0"
pwd = "1.4.0"
regex = "1.7.1"
relm4 = "0.5.0"
serde = { version = "1.0.142", features = ["derive"] }
shlex = "1.3.0"
thiserror = "1.0.32"
tokio = { version = "1.26.0", features = ["net", "time"] }
toml = "0.6.0"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["local-time"] }
tracker = "0.2.0"

[features]
gtk4_8 = ["gtk4/v4_8"]
