# SPDX-FileCopyrightText: 2022 Harish Rajagopal <harish.rajagopals@gmail.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "regreet"
version = "0.1.3"
authors = ["Harish Rajagopal <harish.rajagopals@gmail.com>"]
edition = "2021"
rust-version = "1.80"
description = "Clean and customizable greeter for greetd"
repository = "https://github.com/rharish101/ReGreet/"
license = "GPL-3.0-or-later"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
const_format = { version = "0.2.33", features = ["rust_1_64"] }
educe = "0.6"
file-rotate = "0.7"
glob = "0.3"
greetd_ipc = { version = "0.10", features = ["tokio-codec"] }
gtk4 = "0.9"
humantime-serde = "1.1.1"
i18n-embed = { version = "0.15.2", features = [
    "desktop-requester",
    "fluent-system",
] }
i18n-embed-fl = "0.9.2"
jiff = "0.1.14"
lazy_static = "1.5.0"
lru = "0.12"
pwd = "1.4.0"
regex = "1.10"
relm4 = { version = "0.9", features = ["adw", "libadwaita"] }
rust-embed = "8.5.0"
serde = { version = "1.0", features = ["derive"] }
shlex = "1.3"
thiserror = "2.0"
tokio = { version = "1.39", features = ["net", "process", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["local-time"] }
tracker = "0.2"
unic-langid = "0.9.5"

[features]
gtk4_8 = ["gtk4/v4_8"]

[dev-dependencies]
test-case = "3.3.1"
