# SPDX-FileCopyrightText: 2022 The ReGreet Authors
#
# SPDX-License-Identifier: 0BSD

[package]
name = "regreet"
version = "0.3.0"
authors = ["Harish Rajagopal <harish.rajagopals@gmail.com>"]
edition = "2024"
rust-version = "1.85"
description = "Clean and customizable greeter for greetd"
repository = "https://github.com/rharish101/ReGreet/"
license = "GPL-3.0-or-later"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
gtk4_8 = ["gtk4/v4_8"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
const_format = "0.2.33"
educe = "0.6"
file-rotate = "0.8"
freedesktop_entry_parser = "2.0.1"
glob = "0.3"
greetd_ipc = { version = "0.10", features = ["tokio-codec"] }
gtk4 = "0.10"
humantime-serde = "1.1.1"
jiff = "0.2.24"
lru = "0.18"
regex = "1.10"
relm4 = "0.10"
serde = { version = "1.0", features = ["derive"] }
shlex = "1.3"
thiserror = "2.0"
tokio = { version = "1.43", features = ["fs", "net", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["local-time"] }
tracker = "0.2"
zbus = { version = "5.10.0", features = ["tokio"], default-features = false }
